EVINCE BACKPORTS: libdocument: Added can-have-popup property to EvAnnotationMarkups.

Backported by Peter Moser <pitiz29a@gmail.com>

Taken from:
https://gitlab.gnome.org/GNOME/evince/commit/e39e492585602485af62b47a52fcbf6205b5aac0

commit e39e492585602485af62b47a52fcbf6205b5aac0
Author: Philipp Reinkemeier <philipp.reinkemeier@offis.de>
Date:   Wed Mar 18 18:41:01 2015 +0100

    libdocument: Added can-have-popup property to EvAnnotationMarkups.

    This patch adds a property can-have-popup to EvAnnotationMarkup.

    https://bugzilla.gnome.org/show_bug.cgi?id=733603